--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,8 @@ subdir('src/aie')
 project_source_files = [
   'src/npu-json/main.cpp',
   'src/npu-json/engine.cpp',
-  'src/npu-json/npu/indexer.cpp'
+  'src/npu-json/npu/indexer.cpp',
+  'src/npu-json/structural/classifier.cpp',
 ]
 
 project_dependencies = [
