--- a/test/meson.build
+++ b/test/meson.build
@@ -2,6 +2,7 @@
 test_files = [
   'unit/escape_carry_index_test.cpp',
   'unit/structural_classifier_test.cpp',
+  'unit/structural_character_index_test.cpp',
 ]
 
 test_exe = executable(
