Add npu test skeleton and basic string_index_test

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,4 +1,4 @@
-
+# Build & run unit tests (CPU side)
 test_files = [
   'unit/escape_carry_index_test.cpp',
   'unit/structural_classifier_test.cpp',
@@ -14,3 +14,12 @@ test_exe = executable(
 )
 
 test('unit_test', test_exe)
+
+# Build NPU end-to-end tests
+executable(
+  'npu_tests',
+  'npu/string_index_test.cpp',
+  include_directories: '../src',
+  dependencies : project_dependencies,
+  link_with : npu_json_lib
+)
