Manage optimization level with meson

--- a/meson.build
+++ b/meson.build
@@ -29,7 +29,7 @@ project_include_directories = [
 
 build_args = []
 
-add_project_arguments(['-O3', '-march=native'], language: 'cpp')
+add_project_arguments(['-march=native'], language: 'cpp')
 
 npu_json_lib = shared_library(
   'npu_json_lib',
