Update tests with pipelined iterator

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,7 +2,7 @@
 test_files = [
   'unit/escape_carry_index_test.cpp',
   'unit/structural_classifier_test.cpp',
-  'unit/structural_character_index_test.cpp',
+  'util/test-iterator.cpp',
 ]
 
 test_exe = executable(
