--- a/src/aie/meson.build
+++ b/src/aie/meson.build
@@ -1,20 +1,40 @@
 # Compile C++ kernels into object files
 aie_compiler = find_program('clang++')
 aie_tools_root = get_option('aie-tools-root')
+
+# 1. Find Python
+python = find_program('python')
+
+# 2. Dynamically find the mlir_aie include path using __path__ for namespace packages
+#    We cast __path__ to a list and take the first entry, then append 'include'
+cmd = 'import os; import mlir_aie; print(os.path.join(list(mlir_aie.__path__)[0], "include"))'
+
+r = run_command(python, '-c', cmd, check: false)
+
+if r.returncode() != 0
+  error('Could not find mlir_aie python package. Make sure the venv is active.')
+endif
+
+mlir_aie_inc = r.stdout().strip()
+# Optional: Print it to debug if the build fails again
+message('Found mlir-aie include path: ' + mlir_aie_inc)
+
 kernel = custom_target(
   'kernel',
   input : 'json.cc',
   output : 'json.cc.o',
   command : [
-    aie_compiler, '-O2', '-std=c++23', '--target=aie2-none-unknown-elf',
+    aie_compiler, '-O2', '-std=c++23', '--target=aie2p-none-unknown-elf',
     '-Wno-parentheses', '-Wno-attributes', '-Wno-macro-redefined',
     '-Wno-deprecated-declarations', '-Wno-logical-not-parentheses', '-DNDEBUG',
-    '-I', aie_tools_root + '/include', '-c', '@INPUT@', '-o', '@OUTPUT@'
+    '-DBIT_WIDTH=8',
+    '-I', aie_tools_root + '/include',
+    '-I', mlir_aie_inc,
+    '-c', '@INPUT@', '-o', '@OUTPUT@'
   ]
 )
 
 # Compile Python NPU application description to MLIR
-python = find_program('python')
 mlir = custom_target(
   'json.mlir',
   input : ['gen_mlir_design.py', kernel],
@@ -31,7 +51,8 @@ custom_target('json.xclbin',
   install : true,
   install_dir : 'xclbins',
   command : [
-    aiecc, '--aie-generate-npu', '--no-xchessc', '--no-xbridge', '--aie-generate-cdo',
-    '--no-compile-host', '--xclbin-name=@OUTPUT@', '--npu-insts-name=insts.txt', '@INPUT1@'
+    aiecc, '--aie-generate-xclbin', '--aie-generate-npu-insts', '--no-compile-host', 
+    '--no-xchessc', '--no-xbridge',
+    '--xclbin-name=@OUTPUT@', '--npu-insts-name=insts.txt', '@INPUT1@'
   ]
 )
