--- a/requirements-extras.txt
+++ b/requirements-extras.txt
@@ -1,2 +1,3 @@
-git+https://github.com/makslevental/mlir-python-extras@f08db06
--f https://github.com/llvm/eudsl/releases/expanded_assets/latest
+# git+https://github.com/makslevental/mlir-python-extras@f08db06
+# -f https://github.com/llvm/eudsl/releases/expanded_assets/latest
+mlir-python-extras
